app-one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appone-pod
  labels:
    app: appone
spec:
  containers:
    - image: juanfbl93/app_one
      name: appone
