kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: apps.com
    - http:
        paths:
          - path: /appone
            backend:
              serviceName: service-appone
              servicePort: 80
          - path: /apptwo
            backend:
              serviceName: service-apptwo
              servicePort: 80
